# pp_3_semaphore

c_implementation/: CMakeLists.txt  main.c  semaphore.c  semaphore.h
go_implementation/: go.mod  main.go  semaphore.go
